# UnbiasedAI--Hackathon

./: .gitignore  Readme.MD  reference.md  setup.md
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/analyzer/: explainer.py  feature_detector.py  metrics.py  mitigation.py  model_trainer.py  proxy_detector.py  validator.py
backend/routers/: analyze.py  mitigate.py  proxy.py  upload.py
backend/utils/: auth.py  data_loader.py  supabase_client.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AuditHistory.tsx  AuthModal.tsx  FileUpload.tsx  GroupComparisonChart.tsx  MetricCard.tsx  MitigationPanel.tsx  Navbar.tsx  ProxyWarning.tsx  VerdictBanner.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Configure.tsx  Dashboard.tsx  Home.tsx  Report.tsx  Results.tsx
frontend/src/types/: database.ts  fairlens.ts
